--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -95,6 +95,7 @@ outputs:
     files:
       - include/libdwarf.h
       - include/dwarf.h
+      - include/libdwarf-0/dwarf.h
       - lib/pkgconfig/libdwarf*
       - lib/cmake/libdwarf
     test:
@@ -113,6 +114,7 @@ outputs:
         - pkg-config --print-errors --exact-version="\"$PKG_VERSION\"" libdwarf
         - test -f $PREFIX/include/libdwarf.h
         - test -f $PREFIX/include/dwarf.h
+        - test -f $PREFIX/include/libdwarf-0/dwarf.h
         - test -f $PREFIX/lib/libdwarf${SHLIB_EXT}
         - test -f $PREFIX/lib/cmake/libdwarf/libdwarfConfig.cmake
         - cd test
@@ -155,12 +157,16 @@ outputs:
       run:
     files:
       - lib/libdwarf.so          # [linux]
+      - lib/libdwarf.so.0        # [linux]
       - lib/libdwarf.dylib       # [osx]
+      - lib/libdwarf.dylib.0     # [osx]
     test:
       commands:
         - test ! -f $PREFIX/lib/libdwarf*.a
-        - test -f $PREFIX/lib/libdwarf.so      # [linux]
+        - test -f $PREFIX/lib/libdwarf.so   # [linux]
+        - test -f $PREFIX/lib/libdwarf.so.0 # [linux]
         - test -f $PREFIX/lib/libdwarf.dylib   # [osx]
+        - test -f $PREFIX/lib/libdwarf.dylib.0 # [osx]
     about:
       home: https://www.prevanders.net/dwarf.html
       summary: a library for manipulating DWARF Debugging Information Format (runtime .so)
