Make a copy of of libdwarf.so.0 in the old location (#20)
* Make copies of dwarf.h and libdwarf.so.0 in the old locations

* Bump build number

* Undo change to populate libdwarf-0/dwarf.h

* Fix

* MNT: Re-rendered with conda-build 24.5.0, conda-smithy 3.36.0, and conda-forge-pinning 2024.05.21.18.33.22

* Try to use SOVERSION

* Usxe a wildcard to export versioned .so's

* Macos

---------

Co-authored-by: conda-forge-webservices[bot] <91080706+conda-forge-webservices[bot]@users.noreply.github.com>

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,9 +10,10 @@ source:
   patches:
     - patches/0001-add-enable_libdwarf-and-enable_dwarfdump-to-configur.patch
     - patches/0002-use-PATH-resolution-when-testing-dwarfdump.patch
+    - patches/0003-soversion.patch
 
 build:
-  number: 2
+  number: 3
   skip: true  # [win]
 
 requirements:
@@ -155,12 +156,16 @@ outputs:
       run:
     files:
       - lib/libdwarf.so          # [linux]
+      - lib/libdwarf.so.*        # [linux]
       - lib/libdwarf.dylib       # [osx]
+      - lib/libdwarf.*.dylib     # [osx]
     test:
       commands:
         - test ! -f $PREFIX/lib/libdwarf*.a
-        - test -f $PREFIX/lib/libdwarf.so      # [linux]
-        - test -f $PREFIX/lib/libdwarf.dylib   # [osx]
+        - test -f $PREFIX/lib/libdwarf.so       # [linux]
+        - test -f $PREFIX/lib/libdwarf.so.0     # [linux]
+        - test -f $PREFIX/lib/libdwarf.dylib    # [osx]
+        - test -f $PREFIX/lib/libdwarf.0.dylib  # [osx]
     about:
       home: https://www.prevanders.net/dwarf.html
       summary: a library for manipulating DWARF Debugging Information Format (runtime .so)
