--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,6 +1,11 @@
 build_platform:
+  linux_aarch64: linux_aarch64
+  linux_ppc64le: linux_ppc64le
   osx_arm64: osx_64
 test: native_and_emulated
+provider:
+  linux_aarch64: default
+  linux_ppc64le: default
 github:
   branch_name: main
   tooling_branch_name: main
